--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,62 +10,147 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         android:gravity="center_horizontal">
 
-        <TextView
-            android:id="@+id/number11"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="24"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/number12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="24"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/billiard"/>
 
-        <TextView
-            android:id="@+id/number13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="24"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"/>
+            <TextView
+                android:id="@+id/number11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="24"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/number14"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="24"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/number15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="24"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/billiard"/>
 
-        <TextView
-            android:id="@+id/number16"
+            <TextView
+                android:id="@+id/number12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="24"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="24"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"/>
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/billiard"/>
+
+            <TextView
+                android:id="@+id/number13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="24"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/billiard"/>
+
+            <TextView
+                android:id="@+id/number14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="24"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/billiard"/>
+
+            <TextView
+                android:id="@+id/number15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="24"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/billiard"/>
+
+            <TextView
+                android:id="@+id/number16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="24"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
