--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitStart"
+        app:lottie_rawRes="@raw/money"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="horizontal"
         android:gravity="center_horizontal">
 
@@ -155,12 +164,13 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lotteryWhirl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="32dp"
+        android:scaleType="centerCrop"
         app:lottie_rawRes="@raw/lottery_whirl"
         app:lottie_loop="false"
         app:lottie_autoPlay="false"/>
